# Arain-Association-Youth-Wing-Pakistan-App

./: .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  test_api_connections.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py
backend/app/routers/: __init__.py  agent.py  auth.py  contact.py  directory.py
backend/tests/: test_directory.py
src/: App.jsx  apiService.js  index.css  main.jsx
src/components/: APITest.jsx  ChatbotWidget.jsx
src/components/layout/: Footer.css  Footer.jsx  Header.css  Header.jsx
src/i18n/: i18n.js
src/pages/: AdminDashboard.jsx  ContactUs.jsx  DirectoryRegistration.jsx  HomePage.jsx
src/styles/: _mixins.scss  _variables.scss  compiled.css  compiled.css.map  main.scss
src/styles/pages/: AdminDashboard.scss  ContactUs.scss  DirectoryRegistration.scss  HomePage.scss
